k8s/scdf/own_manifests/ingress-resource-mysql.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:     
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mysql.mariusdev.net"
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific 
        backend:
          service:
            name: mysql
            port:
              number: 3306
